kubeflow/helm/pipelines/upstream-2.0.1/webapp/ml-pipeline-ui_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ml-pipeline-ui
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
    application-crd-id: kubeflow-pipelines
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline-ui
      app.kubernetes.io/component: ml-pipeline
      app.kubernetes.io/name: kubeflow-pipelines
      application-crd-id: kubeflow-pipelines
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: ml-pipeline-ui
        app.kubernetes.io/component: ml-pipeline
        app.kubernetes.io/name: kubeflow-pipelines
        application-crd-id: kubeflow-pipelines
    spec:
      containers:
        - env:
            - name: VIEWER_TENSORBOARD_POD_TEMPLATE_SPEC_PATH
              value: /etc/config/viewer-pod-template.json
            - name: DEPLOYMENT
              value: KUBEFLOW
            - name: ARTIFACTS_SERVICE_PROXY_NAME
              value: ml-pipeline-ui-artifact
            - name: ARTIFACTS_SERVICE_PROXY_PORT
              value: "80"
            - name: ARTIFACTS_SERVICE_PROXY_ENABLED
              value: "true"
            - name: ENABLE_AUTHZ
              value: "true"
            - name: KUBEFLOW_USERID_HEADER
              value: kubeflow-userid
            - name: KUBEFLOW_USERID_PREFIX
              value: ""
            - name: MINIO_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: MINIO_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: accesskey
                  name: mlpipeline-minio-artifact
            - name: MINIO_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: secretkey
                  name: mlpipeline-minio-artifact
            - name: ALLOW_CUSTOM_VISUALIZATIONS
              value: "true"
          image: gcr.io/ml-pipeline/frontend:2.0.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - wget
                - -q
                - -S
                - -O
                - '-'
                - http://localhost:3000/apis/v1beta1/healthz
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
          name: ml-pipeline-ui
          ports:
            - containerPort: 3000
          readinessProbe:
            exec:
              command:
                - wget
                - -q
                - -S
                - -O
                - '-'
                - http://localhost:3000/apis/v1beta1/healthz
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 10m
              memory: 70Mi
          volumeMounts:
            - mountPath: /etc/config
              name: config-volume
              readOnly: true
      serviceAccountName: ml-pipeline-ui
      volumes:
        - configMap:
            name: ml-pipeline-ui-configmap
          name: config-volume
