kubeflow/helm/pipelines/upstream-2.0.1/webapp/ml-pipeline-ui_VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/component: ml-pipeline
    app.kubernetes.io/name: kubeflow-pipelines
    application-crd-id: kubeflow-pipelines
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /pipeline
      rewrite:
        uri: /pipeline
      route:
        - destination:
            host: ml-pipeline-ui.kubeflow.svc.cluster.local
            port:
              number: 80
      timeout: 300s
